--- a/layouts/partials/custom_js.html
+++ b/layouts/partials/custom_js.html
@@ -1,4 +1,6 @@
 {{ if .Params.katex }}
 {{ partial "katex.html" . }}
 {{ end }}
-
+{{ if or (ne .Params.ad false) .IsHome }}
+{{ partial "adsense.html" . }}
+{{ end }}
